# Finvest-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  pr.yml  unit-tests.yml
ciex-backend/: Dockerfile  logconfig.yml  pyproject.toml
ciex-backend/src/: main.py  worker.py
ciex-backend/src/api/: deps.py  routes.py
ciex-backend/src/api/v1/: health.py
ciex-backend/src/core/: config.py  enums.py  exceptions.py  tasks.py
ciex-backend/src/db/: session.py
ciex-backend/src/interfaces/: repository.py
ciex-backend/src/migrations/: env.py
ciex-backend/src/models/: __init__.py  base.py
ciex-backend/src/repositories/: sqlalchemy.py
ciex-backend/src/schemas/: common.py
ciex-backend/tests/: conftest.py  test_repository.py
docs/: README-es.md  README-fr.md  README-pt.md  architecture.md  developing.md  troubleshooting.md
fastapi-base/: Dockerfile  pyproject.toml
fastapi-base/src/: main.py
fastapi-base/src/agent/: agentRout.py  agentRouter.py  cloudLLM.py
fastapi-base/src/api/: common.py  deps.py  middlewares.py  routes.py
fastapi-base/src/api/v1/: auth.py  chat.py  health.py
fastapi-base/src/core/: backends.py  config.py  enums.py  exceptions.py  security.py
fastapi-base/src/db/: init_db.py  session.py
fastapi-base/src/interfaces/: repository.py
fastapi-base/src/migrations/: env.py
fastapi-base/src/migrations/versions/: 43d05a1bac7f_creating_migration.py  5c80b71144cc_creating_migration.py  9071c9df7443_creating_migration.py  a8da3fa27e17_creating_migration.py
fastapi-base/src/models/: __init__.py  base.py  chat.py  user.py
fastapi-base/src/repositories/: results.py  sqlalchemy.py  types.py
fastapi-base/src/schemas/: auth.py  chat.py  common.py
fastapi-base/tests/: conftest.py  test_db.py  test_deps.py  test_repository.py  test_routes.py  test_schemas.py
ops/: docker-compose.test.yml  production.Dockerfile
